--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,16 +15,45 @@
       <td><%= book.title %></td>
       <td><%= book.body %></td>
 
+      <td><%= link_to "Show", book_path(book.id)%></td>
+      <td><%= link_to "Edit", edit_book_path(book.id)%></td>
+      <td><%= link_to "Destroy", destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure?"%></td>
     </tr>
     <% end %>
   </tbody>
 </table>
 
 
+<%# 投稿機能%>
+<h2 >New book</h2>
+ <%= form_for(@book, url: '/books') do |f| %>
 
+<%# エラーメッセージ表示%>
+  <% if @book.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@book.errors.count, "error") %> prohibited this product from being saved:</h2>
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 
-<%= form_for(@book, url: '/books') do |f| %>
+<%# 投稿フォーム%>
+  <div class="field">
+    <div class="field_with_errors">
     <%= f.label :title%>  <%= f.text_field :title %>
+    </div>
+  </div>
+
+  <div class="field">
+    <div class="field_with_errors">
     <%= f.label :body%>   <%= f.text_area :body %>
-    <%= f.submit "Create Book" %>
+    </div>
+  </div>
+
+  <div class="actions">
+  <%= f.submit "Create Book" %>
+  </div>
 <% end %>
