--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,27 +1,13 @@
-<h1 class="title">Books</h1>
-<%# 投稿一覧%>
-<table>
-  <thead>
-    <tr>
-    <th>Title</th>
-    <th>Body</th>
-    <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @books.each do |book| %>
-    <tr>
-      <td><%= book.title %></td>
-      <td><%= book.body %></td>
-
-      <td><%= link_to "Show", book_path(book.id)%></td>
-      <td><%= link_to "Edit", edit_book_path(book.id)%></td>
-      <td><%= link_to "Destroy", destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure?"%></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
+<header>
+<h4 class="title">Books</h4>
+</header>
+<!--user_info-->
+<div>
+  <h2>User info</h2>
+  <div>画像が入る</div>
+  <%= link_to 'ユーザー設定'%>
+</div>
+  </div>
 
 
 <%# 投稿機能%>
@@ -43,13 +29,13 @@
 <%# 投稿フォーム%>
   <div class="field">
     <div class="field_with_errors">
-    <%= f.label :title%>  <%= f.text_field :title %>
+    <p>Title</p>  <%= f.text_field :title %>
     </div>
   </div>
 
   <div class="field">
     <div class="field_with_errors">
-    <%= f.label :body%>   <%= f.text_area :body %>
+    <p>Opinion</p>  <%= f.text_area :body %>
     </div>
   </div>
 
@@ -57,3 +43,24 @@
   <%= f.submit "Create Book" %>
   </div>
 <% end %>
+
+<%# 投稿された%>
+
+<table>
+  <thead>
+    <tr>
+    <th>Title</th>
+    <th>Body</th>
+    <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @books.each do |book| %>
+    <tr>
+      <td><%= book.title %></td>
+      <td><%= book.body %></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
