--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,34 @@
  *= require_tree .
  *= require_self
  */
+
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  .clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
+  }
+
+  // title
+  header .navbar-left span {
+    font-size: 20px;
+    padding-top: 10px;
+    color: white;
+  }
+
+  div.field, div.actions {
+    margin-bottom: 10px;
+  }
+
+  // errors
+  #error_explanation {
+    color: red;
+  }
+
+
+  @import "bootstrap-sprockets";
+  @import "bootstrap";
