--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,66 +1,75 @@
-<header>
-<h4 class="title">Books</h4>
-</header>
-<!--user_info-->
-<div>
-  <h2>User info</h2>
-  <div>画像が入る</div>
-  <%= link_to 'ユーザー設定'%>
-</div>
-  </div>
+<div class="body">
+  <div class="container">
 
-
-<%# 投稿機能%>
-<h2 >New book</h2>
- <%= form_for(@book, url: '/books') do |f| %>
-
-<%# エラーメッセージ表示%>
-  <% if @book.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@book.errors.count, "error") %> prohibited this product from being saved:</h2>
-      <ul>
-        <% @book.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
+      <%# エラーメッセージ表示%>
+      <div>
+        <% if @book.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@book.errors.count, "error") %> prohibited this product from being saved:</h2>
+            <ul>
+              <% @book.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
         <% end %>
-      </ul>
+      </div>
+
+        <!--user_info-->
+    <div class="col-xs-3 clearfix">
+        <div class="user_info">
+          <h1>User Info</h1>
+        </div>
+
+
+        <%# 投稿機能%>
+        <h2 >New book</h2>
+        <%= form_for(@book, url: '/books') do |f| %>
+        <%# 投稿フォーム%>
+          <div class="field">
+            <div class="field_with_errors">
+            <p>Title</p>  <%= f.text_field :title %>
+            </div>
+          </div>
+
+          <div class="field">
+            <div class="field_with_errors">
+            <p>Opinion</p>  <%= f.text_area :body %>
+            </div>
+          </div>
+
+          <div class="actions">
+          <%= f.submit "Create Book" %>
+          </div>
+        <% end %>
     </div>
-  <% end %>
 
-<%# 投稿フォーム%>
-  <div class="field">
-    <div class="field_with_errors">
-    <p>Title</p>  <%= f.text_field :title %>
-    </div>
+
+
+      <%# 投稿された%>
+      <div class="col-xs-9 clearfix">
+        <% if @book.save %>
+          <p>保存</p>
+        <% else %>
+          <h2>Books</h2>
+          <thead>
+            <tr>
+              <th>Title</th>
+              <th>Opinion</th>
+            </tr>
+          </thead>
+
+          <table class="table">
+            <tbody>
+              <% @books.each do |book| %>
+              <tr>
+                <td><%= book.title %></td>
+                <td><%= book.body %></td>
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
+        <% end %>
+      </div>
   </div>
-
-  <div class="field">
-    <div class="field_with_errors">
-    <p>Opinion</p>  <%= f.text_area :body %>
-    </div>
-  </div>
-
-  <div class="actions">
-  <%= f.submit "Create Book" %>
-  </div>
-<% end %>
-
-<%# 投稿された%>
-
-<table>
-  <thead>
-    <tr>
-    <th>Title</th>
-    <th>Body</th>
-    <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @books.each do |book| %>
-    <tr>
-      <td><%= book.title %></td>
-      <td><%= book.body %></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
+</div>
