--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,5 @@
-<div class="body">
-  <div class="container">
-
+<div class="container">
+  <div class="row">
       <%# エラーメッセージ表示%>
       <div>
         <% if @book.errors.any? %>
@@ -19,28 +18,23 @@
     <div class="col-xs-3 clearfix">
         <div class="user_info">
           <h1>User Info</h1>
+          <h2>画像</h2>
+          <%= attachment_image_tag @user, :image, :fill, 300, 300, format: 'jpeg' %>
         </div>
 
 
         <%# 投稿機能%>
-        <h2 >New book</h2>
+        <h1>New book</h1>
         <%= form_for(@book, url: '/books') do |f| %>
-        <%# 投稿フォーム%>
-          <div class="field">
-            <div class="field_with_errors">
-            <p>Title</p>  <%= f.text_field :title %>
-            </div>
-          </div>
+            <p>Title</p> 
+            <%= f.text_field :title , class: "edit-title col-xs-12" %>
 
-          <div class="field">
-            <div class="field_with_errors">
-            <p>Opinion</p>  <%= f.text_area :body %>
+            <p>Opinion</p> 
+            <%= f.text_area :body, class: "edit-body col-xs-12" %>
+            <br>
+            <div>
+              <%= f.submit "Create Book", class: "btn btn-primary col-xs-12" %>
             </div>
-          </div>
-
-          <div class="actions">
-          <%= f.submit "Create Book" %>
-          </div>
         <% end %>
     </div>
 
@@ -63,8 +57,15 @@
             <tbody>
               <% @books.each do |book| %>
               <tr>
+                <td></td>
                 <td><%= book.title %></td>
                 <td><%= book.body %></td>
+                <td>
+                  <%= link_to 'Edit', edit_book_path(book.id), class:"btn-sm btn-success" %>
+                </td>
+                <td>
+                  <%= link_to 'Destroy', "", method: :delete, "data-confirm" => "本当に消しますか?", class: "btn-sm btn-danger" %>
+                </td>
               </tr>
               <% end %>
             </tbody>
