--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bookers4</title>
+    <title>Bookers5</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -20,7 +20,7 @@
             <% if user_signed_in? %>
                 <li>
                   <%= link_to " Home", books_path,
-                   class: "glyphicon glyhicon-home home" %>
+                   class: "glyphicon glyphicon-home home" %>
                 </li>
                 <li>
                   <%= link_to " Users", "",
@@ -58,7 +58,17 @@
       </div>
     </header>
 
-
     <%= yield %>
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-3 col-xs-offset-9">
+            <p>CopyRight Infratop.inc</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
   </body>
 </html>
