--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,5 +1,5 @@
-<div class="body">
-  <div class="container">
+<div class="container">
+  <div class="row">
       <p id="notice"></p>
       <h2>Forgot your password?</h2>
 
