--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,5 +1,5 @@
-<div class="body">
-  <div class="container">
+<div class="container">
+  <div class="row">
     <p id="notice"></p>
     <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
@@ -44,7 +44,7 @@
         <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
         <%= link_to "Back", :back %>
-
   </div>
 </div>
+
 
