--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,5 +1,5 @@
-<div class="body">
-  <div class="container">
+<div class="container">
+  <div class="row">
     <p id="notice"></p>
     <h2>Sign up</h2>
 
