--- a/app/views/users/top.html.erb
+++ b/app/views/users/top.html.erb
@@ -1,11 +1,10 @@
-<div class="body">
+
   <div class="container">
     <p id="notice"></p>
     <div class="row">
       <div class="top message col-md-offset-3 col-md-6">
         <h1>Welcome to
-          <span class="glyphicon glyphicon-book">
-            <strong>Bookers</strong>!!
+          <span class="glyphicon glyphicon-book"><strong>Bookers</strong>!!
           </span>
         </h1>
 
@@ -16,12 +15,12 @@
         <p>you can share and exchange your opinions , inpressions , and emotions</p>
         <p>about various books!</p>
         <div class="btn-wrapper">
-          <div class="row">
+          <div class="">
             <p>
               <%= link_to 'Login', new_user_session_path, class:"btn btn-info col-xs-10 col-xs-offset-1 sign_in" %>
             </p>
           </div>
-          <div class="row">
+          <div class="">
             <p>
               <%= link_to 'Sign Up', new_user_registration_path, class:"btn btn-success col-xs-10 col-xs-offset-1 sign_up" %>
             </p>
@@ -30,5 +29,5 @@
       </div>
     </div>
   </div>
-</div>
+
 
