--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,7 @@
   //   clear: both;
   // }
 
-  // title
+  // header_title
   header .navbar-left span {
     font-size: 20px;
     padding-top: 10px;
@@ -41,6 +41,7 @@
     color: red;
   }
 
+  // bodyを下げる
   .row{
     padding: 50px 0;
   }
