--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -1,9 +1,17 @@
 // Place all the styles related to the books controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-label {
-    display: inline-block;
+p {
     max-width: 100%;
     margin-bottom: 5px;
     font-weight: bold;
+}
+
+.edit-body {
+    margin-bottom: 10px;
+}
+
+
+.notice {
+   color: greenyellow;
 }
