--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <p id="notice"></p>
+    <%= flash[:notice] %>
     <h1>Welcome to <span class="glyphicon glyphicon-book"></span><strong>Bookers</strong>!</h1>
   </div>
 </div>  
