--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
     <h2>Sign up</h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= render "users/shared/error_messages", resource: resource %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="field">
         <%= f.label :name %><br />
@@ -34,6 +34,6 @@
       </div>
     <% end %>
 
-    <%= render "users/shared/links" %>
+    <%= render "devise/shared/links" %>
   </div>
 </div>
