--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
                 </li>
 
                 <li>
-                  <%= link_to " About", new_user_path,class:"glyphicon glyphicon-link about" %>
+                  <%= link_to " About", new_book_path,class:"glyphicon glyphicon-link about" %>
                 </li>
                 <li>
                   <%= link_to " sign up", new_user_registration_path, 
