--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,6 +1,29 @@
 <div class="container">
   <div class="row">
-    <%= flash[:notice] %>
-    <h1>Welcome to <span class="glyphicon glyphicon-book"></span><strong>Bookers</strong>!</h1>
+    <h1>Home</h1>
+    <%# 投稿された%>
+        <div class="col-xs-9 clearfix">
+            <h2>Books</h2>
+            <thead>
+              <tr>
+                <th>Title</th>
+                <th>Opinion</th>
+              </tr>
+            </thead>
+
+            <table class="table clearfix">
+              <tbody>
+                <% @books.each do |book| %>
+                  <tr>
+                    <td>
+                      id
+                    </td>
+                    <td><%= book.title %></td>
+                    <td><%= book.body %></td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+      </div>
   </div>
-</div>  
+</div>
