--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -4,16 +4,7 @@
         <h1>Editing Book</h1>
         <%= form_for(@book, url: "/books/#{@book.id}") do |f| %>
         <%# エラーメッセージ表示%>
-          <% if @book.errors.any? %>
-            <div id="error_explanation">
-              <h2><%= pluralize(@book.errors.count, "error") %> prohibited this product from being saved:</h2>
-              <ul>
-                <% @book.errors.full_messages.each do |message| %>
-                  <li><%= message %></li>
-                <% end %>
-              </ul>
-            </div>
-          <% end %>
+          <%= render 'root/errors' %>
 
         <%# 投稿フォーム%>
           <div class="field">
