--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,34 +1,35 @@
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-ofset-3">
-        <h1>Editing Book</h1>
-        <%= form_for(@book, url: "/books/#{@book.id}") do |f| %>
-        <%# エラーメッセージ表示%>
-          <%= render 'root/errors' %>
+  <!--編集_page-->
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 col-md-ofset-3">
+      <h1>Editing Book</h1>
+      <%= form_for(@book, url: "/books/#{@book.id}") do |f| %>
+      <%# エラーメッセージ表示%>
+        <%= render 'root/errors' %>
 
-        <%# 投稿フォーム%>
-          <div class="field">
-            <label>Title</label>  
-            <%= f.text_field :title, class:"edit-title col-xs-12" %>
-          </div>
+      <%# 投稿フォーム%>
+        <div class="field">
+          <label>Title</label>  
+          <%= f.text_field :title, class:"edit-title col-xs-12" %>
+        </div>
 
-          <div class="field">
-            <label>Body</label>  
-            <%= f.text_area :body, class:"edit-body col-xs-12" %>
-          </div>
+        <div class="field">
+          <label>Body</label>  
+          <%= f.text_area :body, class:"edit-body col-xs-12" %>
+        </div>
 
-          <div class="actions">
-            <%= f.submit 'Update Book', class:"btn btn-primary col-xs-12" %>
-          </div>
+        <div class="actions">
+          <%= f.submit 'Update Book', class:"btn btn-primary col-xs-12" %>
+        </div>
 
 
-          <div>
-          <%= link_to "Show", book_path(@book.id) %>
-          |
-          <%= link_to "Back", books_path%>
-          </div>
-          
-        <% end %>
-      </div>
+        <div>
+        <%= link_to "Show", book_path(@book.id) %>
+        |
+        <%= link_to "Back", books_path%>
+        </div>
+        
+      <% end %>
     </div>
   </div>
+</div>
