--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,4 @@
+  <!--Books_page-->
 <div class="container">
   <div class="row">
       <%= flash[:notice] %>
@@ -5,12 +6,24 @@
       <%= render 'root/errors' %>
 
     <!--user_info-->
-    <div class="col-xs-3 clearfix">
+    <div class="col-xs-3">
         <div class="user_info">
-          <h1>User Info</h1>
-          <h2>画像</h2>
+          <h2>User Info</h2>
+
+          <table class="table">
+            <tbody>
+              <tr>
+                <td>name</td>
+                <td><%= current_user.name %></td>
+              </tr>
+              <tr>
+                <td>Introduction</td>
+                <td><%= current_user.introduction %></td>
+              </tr>
+            </tbody>
+          </table>
           <%= attachment_image_tag @user, :image, :fill, 300, 300, format: 'jpeg' %>
-          <%= link_to '設定', "" %>
+          <%= link_to '設定', edit_user_path(current_user.id) %>
         </div>
 
         <%# 投稿機能%>
@@ -30,16 +43,17 @@
 
 
     <%# 投稿された%>
-        <div class="col-xs-9 clearfix">
+      <div class="col-xs-9">
             <h2>Books</h2>
-            <thead>
+          <table class="table clearfix">
+              <thead>
               <tr>
+                <th></th>
                 <th>Title</th>
                 <th>Opinion</th>
               </tr>
-            </thead>
+              </thead>
 
-            <table class="table clearfix">
               <tbody>
                 <% @books.each do |book| %>
                   <tr>
@@ -51,7 +65,7 @@
                   </tr>
                 <% end %>
               </tbody>
-            </table>
+          </table>
       </div>
   </div>
 </div>
