--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,29 +1,64 @@
+  <!--Home_page-->
 <div class="container">
   <div class="row">
-    <h1>Home</h1>
-    <%# 投稿された%>
-        <div class="col-xs-9 clearfix">
-            <h2>Books</h2>
-            <thead>
+      <div class="col-xs-3 clearfix">
+        <!--user Info-->
+        <div class="user_info">
+          <h2>User Info</h2>
+          <table class="table">
+            <tbody>
               <tr>
-                <th>Title</th>
-                <th>Opinion</th>
+                <td>name</td>
+                <td><%= current_user.name %></td>
               </tr>
-            </thead>
+              <tr>
+                <td>Introduction</td>
+                <td><%= current_user.introduction %></td>
+              </tr>
+            </tbody>
+          </table>
+          <%= attachment_image_tag @user, :image, :fill, 300, 300, format: 'jpeg' %>
+          <%= link_to '設定', edit_user_path(current_user.id) %>
+        </div>
+        <%# 投稿機能%>
+        <h1>New book</h1>
+          <%= form_for(@book) do |f| %>
+            <p>Title</p> 
+            <%= f.text_field :title , class: "edit-title col-xs-12" %>
+              <br>
+            <p>Opinion</p> 
+            <%= f.text_area :body, class: "edit-body col-xs-12" %>
+            <div>
+              <%= f.submit "Create Book", class: "btn btn-primary col-xs-12" %>
+            </div>
+          <% end %>
+      </div>
 
-            <table class="table clearfix">
+    <%# 投稿された%>
+      <div class="col-xs-9 clearfix">
+            <h2>Books</h2>
+          <table class="table table-hover table-inverse">
+              <thead>
+                <tr>
+                  <th></th>
+                  <th>Title</th>
+                  <th>Opinion</th>
+                  <th colspan="3"></th>
+                </tr>
+              </thead>
+
               <tbody>
-                <% @books.each do |book| %>
-                  <tr>
-                    <td>
-                      id
-                    </td>
-                    <td><%= book.title %></td>
-                    <td><%= book.body %></td>
-                  </tr>
-                <% end %>
+                  <% @books.each do |book| %>
+                    <tr>
+                      <td>
+                        id
+                      </td>
+                      <td><%= book.title %></td>
+                      <td><%= book.body %></td>
+                    </tr>
+                  <% end %>
               </tbody>
             </table>
-      </div>
+        </div>
   </div>
 </div>
