--- a/app/views/root/_sidebar.html.erb
+++ b/app/views/root/_sidebar.html.erb
@@ -1,7 +1,7 @@
   <div class="col-xs-3">
     <!--user Info-->
     <div class="user_info">
-      <h2>User Info</h2>
+      <h2>User info</h2>
       <!--Profile画像-->
         <% if current_user.profile_image != nil %>
           <%= attachment_image_tag current_user, :profile_image, style: "height: 100px" %>
