--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -24,7 +24,11 @@
                 <% @books.each do |book| %>
                   <tr>
                     <td>
-                      id
+                      <% if current_user.profile_image != nil %>
+                        <%= attachment_image_tag current_user, :profile_image, style: "height: 50px" %>
+                        <% else %>
+                        <%= image_tag 'sample_img.gif', style: "height: 40px" %>
+                      <% end %>
                     </td>
                     <td><%= book.title %></td>
                     <td><%= book.body %></td>
