--- a/app/views/root/top.html.erb
+++ b/app/views/root/top.html.erb
@@ -2,6 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="top message col-md-offset-3 col-md-6">
+      <%= flash[:notice] %>
         <h1>Welcome to
           <span class="glyphicon glyphicon-book"><strong>Bookers</strong>!!
           </span>
@@ -16,7 +17,7 @@
         <div class="btn-wrapper">
           <div class="">
             <p>
-              <%= link_to 'Login', new_user_session_path, class:"btn btn-info col-xs-10 col-xs-offset-1 sign_in" %>
+              <%= link_to 'Log in', new_user_session_path, class:"btn btn-info col-xs-10 col-xs-offset-1 Log_in" %>
             </p>
           </div>
           <div class="">
