--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -16,19 +16,24 @@
               <tbody>
                   <tr>
                     <td>
-                      <%= image_tag "" %>
-                      名前
+                      <%= attachment_image_tag @book.user, :profile_image, style: "height: 50px" %>
                     </td>
                     <td><%= @book.title %></td>
                     <td><%= @book.body %></td>
-                    <td>
-                      <%= link_to 'Edit', edit_book_path(@book.id), 
-                      class:"btn-sm btn-success" %>
-                    </td>
-                    <td>
-                      <%= link_to 'Destroy', book_path(@book), method: :delete, "data-confirm" => "本当に消しますか?", 
-                      class: "btn-sm btn-danger" %>
-                    </td>
+
+                    <% if current_user.id == @book.user_id %>
+                      <td>
+                        <%= link_to 'Edit', edit_book_path(@book.id), 
+                        class:"btn-sm btn-success" %>
+                      </td>
+                      <td>
+                        <%= link_to 'Destroy', book_path(@book), method: :delete, "data-confirm" => "本当に消しますか?", 
+                        class: "btn-sm btn-danger" %>
+                      </td>
+                    <% else %>
+                      <td></td>
+                      <td></td>
+                    <% end %>
                   </tr>
               </tbody>
             </table>
