--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
                    class: "glyphicon glyphicon-home home" %>
                 </li>
                 <li>
-                  <%= link_to " Users", "",
+                  <%= link_to " Users", users_path,
                    class:"glyphicon glyphicon-user users" %>
                 </li>
                 <li>
