--- a/app/views/root/_sidebar.html.erb
+++ b/app/views/root/_sidebar.html.erb
@@ -12,21 +12,24 @@
       <table class="table">
         <tbody>
           <tr>
-            <td>name</td>
+            <td><p>name</p></td>
             <td><span><%= current_user.name %></span></td>
           </tr>
           <tr>
-            <td>Introduction</td>
+            <td><p>Introduction</p></td>
             <td><%= current_user.introduction %></td>
           </tr>
         </tbody>
       </table>
-      <%= attachment_image_tag @user, :image, :fill, 300, 300, format: 'jpeg' %>
-      <%= link_to '', edit_user_path(current_user.id), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench" %>
+      <div>
+      <%# 以下編集中%>
+     
+        <%= link_to '', edit_user_path(current_user.id), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench" %>
+      </div>
     </div>
 
     <%# 投稿機能%>
-    <h1>New book</h1>
+    <h2>New book</h2>
       <%= form_for(@book) do |f| %>
         <p>Title</p> 
         <%= f.text_field :title , class: "edit-title col-xs-12" %>
