--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
-  <!--Books_page-->
-  
+<!--Users_page-->
+
 <div class="container">
-  <div class="row">
+    <div class="row">
       <%= flash[:notice] %>
       <!--error表示-->
       <%= render 'root/errors' %>
@@ -11,18 +11,18 @@
 
       <%# 投稿された%>
       <div class="col-xs-9">
-              <h2>Books</h2>
-            <table class="table clearfix">
+            <h2>Users</h2>
+          <table class="table clearfix">
                 <thead>
                 <tr>
+                  <th>image</th>
+                  <th>name</th>
                   <th></th>
-                  <th>Title</th>
-                  <th>Opinion</th>
                 </tr>
                 </thead>
 
                 <tbody>
-                  <% @books.each do |book| %>
+                  <% @users.each do |user| %>
                     <tr>
                       <td>
                         <% if current_user.profile_image != nil %>
@@ -31,12 +31,12 @@
                           <%= image_tag 'sample_img.gif', style: "height: 40px" %>
                         <% end %>
                       </td>
-                      <td><%= book.title %></td>
-                      <td><%= book.body %></td>
+                      <td><%= user.name %></td>
+                      <td><%= link_to 'show',user_path(user) %></td>
                     </tr>
                   <% end %>
                 </tbody>
-              </table>
+            </table>
         </div>
     </div>
-</div>
+</div> 
