--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row">
     <%# エラーメッセージ表示%>
-    <%= render 'root/errors' %>
+    <%= render 'root/errors_book' %>
 
     <div class="col-md-6 col-md-ofset-3">
       <h1>Editing Book</h1>
