--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,14 +4,14 @@
   <div class="row">
     <%= flash[:notice] %>
     <!--error表示-->
-    <%= render 'root/errors' %>
+    <%= render 'root/errors_book' %>
 
     <!--user_info & 投稿-->
     <%= render 'root/sidebar' %>
 
     <%# 投稿された%>
         <div class="col-xs-9">
-              <h2>User Books</h2>
+              <h2>Books</h2>
             <table class="table clearfix">
                 <thead>
                 <tr>
