--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,5 +54,9 @@
     margin-inline-end: 0px;
   }
 
+  #notice {
+    color: green;
+  }
+
   @import "bootstrap-sprockets";
   @import "bootstrap";
