--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,7 +4,7 @@
     <%= flash[:notice] %>
 
     <!--error表示-->
-    <%= render 'root/errors' %>
+    <%= render 'root/errors_book' %>
 
     <!--user_info & 投稿-->
     <%= render 'root/sidebar' %>
