--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -15,7 +15,7 @@
         </div>
 
         <div class="field">
-          <label>Body</label>  
+          <label>Opinion</label>  
           <%= f.text_area :body, class:"edit-body col-xs-12" %>
         </div>
 
