--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,12 +12,13 @@
       <%# 投稿された%>
       <div class="col-xs-9">
               <h2>Books</h2>
-            <table class="table clearfix">
+            <table class="table table-hover table-inverse">
                 <thead>
                 <tr>
                   <th></th>
                   <th>Title</th>
                   <th>Opinion</th>
+                  <th colspan="3"></th>
                 </tr>
                 </thead>
 
