--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
     <%# 投稿された%>
         <div class="col-xs-9">
               <h2>Books</h2>
-            <table class="table clearfix">
+            <table class="table">
                 <thead>
                 <tr>
                   <th> </th>
@@ -25,8 +25,8 @@
                   <% @user.books.each do |book| %>
                     <tr>
                       <td>
-                          <% if current_user.profile_image != nil %>
-                          <%= attachment_image_tag current_user, :profile_image, style: "height: 50px" %>
+                          <% if @user.profile_image != nil %>
+                          <%= attachment_image_tag @user, :profile_image, style: "height: 50px" %>
                           <% else %>
                           <%= image_tag 'sample_img.gif', style: "height: 40px" %>
                         <% end %>
