--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -25,9 +25,9 @@
 
 
         <div>
-        <%= link_to "Show", book_path(@book.id) %>
+        <%= link_to "Show", book_path(@book.id), class: "link" %>
         |
-        <%= link_to "Back", books_path%>
+        <%= link_to "Back", books_path, class: "link" %>
         </div>
         
       <% end %>
