--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,8 @@
 <div class="container">
   <div class="row">
-    <%= render 'root/errors_user' %>
+
+     <%= render 'root/errors_message' %>
+  
     <h2>User Info</h2>
     <%= form_for(@user) do |f| %>
 
