--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,8 +1,7 @@
   <!--詳細_page--->
 <div class="container">
   <div class="row">
-    <%= flash[:notice] %>
-
+    <p id="notice"><%= flash[:notice] %></p>
     <!--error表示-->
     <%= render 'root/errors_book' %>
 
@@ -33,8 +32,8 @@
                         class:"btn-sm btn-success link" %>
                       </td>
                       <td>
-                        <%= link_to 'Destroy', book_path(@book), method: :delete, "data-confirm" => "本当に消しますか?", 
-                        class: "btn-sm btn-danger link" %>
+                        <%= link_to 'Destroy', book_path(@book), method: :delete, "data-confirm" => "本当に消しますか？", 
+                        class: "btn-sm btn-danger destroy_book_39626" %>
                       </td>
                     <% else %>
                       <td></td>
