--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div class="row">
-      <%= flash[:notice] %>
+      <p id="notice"><%= flash[:notice] %></p>
       <!--error表示-->
       <%= render 'root/errors_book' %>
 
