--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
     <%= render 'root/errors_book' %>
 
     <!--user_info & 投稿-->
-    <%= render 'root/sidebar' %>
+    <%= render 'root/sidebar', user: @user %>
 
     <%# 投稿された%>
         <div class="col-xs-9">
