--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,7 +25,7 @@
                   <% @users.each do |user| %>
                     <tr>
                       <td>
-                        <% if user.profile_image != nil %>
+                        <% if user.profile_image_id != nil %>
                           <%= attachment_image_tag user, :profile_image, style: "height: 50px" %>
                           <% else %>
                           <%= image_tag 'sample_img.gif', style: "height: 40px" %>
