--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
 
     <%# 投稿された%>
         <div class="col-xs-9">
-              <h2>Bookss</h2>
+              <h2>Books</h2>
             <table class="table table-hover table-inverse">
                 <thead>
                 <tr>
@@ -25,7 +25,7 @@
                   <% @user.books.each do |book| %>
                     <tr>
                       <td>
-                          <% if @user.profile_image != nil %>
+                          <% if @user.profile_image_id != nil %>
                           <%= attachment_image_tag @user, :profile_image, style: "height: 50px" %>
                           <% else %>
                           <%= image_tag 'sample_img.gif', style: "height: 40px" %>
