--- a/app/views/root/_sidebar.html.erb
+++ b/app/views/root/_sidebar.html.erb
@@ -26,7 +26,7 @@
       </table>
       <div>
 
-        <%= link_to '', edit_user_path(current_user.id), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench" %> 
+        <%= link_to '', edit_user_path(user.id), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench" %> 
       </div>
     </div>
 
