--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,7 +3,7 @@
 
      <%= render 'root/errors_message' %>
   
-    <h2>User Info</h2>
+    <h2>User info</h2>
     <%= form_for(@user) do |f| %>
 
       <div class="field">
