--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -28,7 +28,7 @@
                         <% if user.profile_image_id != nil %>
                           <%= attachment_image_tag user, :profile_image, style: "height: 50px" %>
                           <% else %>
-                          <%= image_tag 'sample_img.gif', style: "height: 40px" %>
+                          <%= attachment_image_tag user, :profile_image, :fill, 50, 50, format:'jpeg', class: "#", fallback: "sample_img.gif", size:'50x50' %>
                         <% end %>
                       </td>
                       <td><%= user.name %></td>
