--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,8 @@
-<!--Users_page-->
-
 <div class="container">
     <div class="row">
       <p id="notice"><%= flash[:notice] %></p>
       <!--error表示-->
-      <%= render 'root/errors_book' %>
+      <%= render 'root/errors_message', hoge: @book %>
 
       <!--user_info & 投稿-->
       <%= render 'root/sidebar', user: current_user %>
