--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -16,7 +16,8 @@
                   <th></th>
                   <th>Title</th>
                   <th>Opinion</th>
-                  <th colspan="3"></th>
+                  <th>いいね</th>
+                  <th>コメント</th>
                 </tr>
                 </thead>
 
@@ -30,6 +31,13 @@
                       </td>
                       <td><%= link_to book.title, book_path(book.id) %></td>
                       <td><%= book.body %></td>
+
+                      <!--いいね機能-->
+                      <td>
+                        <%= render 'like', book: book %>
+                      </td>
+                      <!--コメント機能-->
+                      <td>コメント数:</td>
                     </tr>
                   <% end %>
                 </tbody>
