--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -53,7 +53,7 @@
               </tbody>
             </table>
 
-            <!--コメント本文の表示-->
+            <!--コメントの表示-->
             <table>
               <tbody>
                 <% @book.book_comments.each do |book_comment| %>
@@ -73,7 +73,7 @@
                     <td>
                       <% if book_comment.user == current_user %>
                         <div>
-                          <%= link_to "削除", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-danger pull-right" %>
+                          <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-danger pull-right" %>
                         </div>
                       <% end %>
                     </td>
@@ -83,14 +83,18 @@
             </table>
 
             <!--コメント投稿機能-->
-            <div>
-              <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
-                <div>
-                  <%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
-                </div>
-                  <%= f.submit "送信する"%>
-              <% end %>
-            </div>
+            <% if current_user.id == @book.user_id %>
+              <!--コメント機能を表示しない-->
+            <% else %>
+              <div>
+                <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
+                  <div class="col-sm-12">
+                    <%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
+                  </div>
+                    <%= f.submit "送信", class: "pull-right" %>
+                <% end %>
+              </div>
+            <% end %>
       </div>
   </div>
 </div>
