--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
             <table class="table table-hover table-inverse">
                 <thead>
                 <tr>
-                  <th> </th>
+                  <th></th>
                   <th>Title</th>
                   <th>Opinion</th>
                 </tr>
@@ -31,10 +31,14 @@
                       </td>
                       <td><%= link_to book.title, book_path(book.id) %></td>
                       <td><%= book.body %></td>
+                      <td>
+                        <i class="glyphicon glyphicon-heart-empty"></i>
+                        <%= book.favorites.count %>
+                      </td>
+                      <td>コメント数: <%= book.book_comments.count %></td>
                     </tr>
                   <% end %>
-                </tbody>
               </table>
         </div>
   </div>
-</div> 
+</div>
