--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -30,6 +30,9 @@
                         <% end %>
                       </td>
                       <td><%= user.name %></td>
+                      <td><%= "フォロー数: #{user.follower.count}" %></td>
+                      <td><%= "フォロワー数: #{user.followed.count}" %></td>
+                      <td><%= render 'root/follow', user: user %></td>
                       <td><%= link_to 'Show',user_path(user) %></td>
                     </tr>
                   <% end %>
@@ -37,4 +40,4 @@
             </table>
         </div>
     </div>
-</div> 
+</div>
